--- a/agendamento_covid/templates/usuarios/home.html
+++ b/agendamento_covid/templates/usuarios/home.html
@@ -1,63 +1,31 @@
+{% extends "usuarios/base.html" %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/usuarios/style.css' %}">
-    <title>Home</title>
-</head>
-<body class="d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-expand-lg navbar-light mb-3">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="{% static 'img/usuarios/logo.svg' %}" alt="Descrição da Imagem">
-            </a>
-    
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a href="#">Home</a></li>
-                <li class="nav-item"><a href="https://lais.huol.ufrn.br/sobre/">Sobre</a></li>
-                <li class="nav-item"><a href="https://lais.huol.ufrn.br/contato/">Contatos</a></li>
-                <li class="nav-item"><a href="https://lais.huol.ufrn.br/comunicacao/#noticias">Noticias</a></li>
-                <li class="nav-item"><a href="https://lais.huol.ufrn.br/internacionalizacao/">LAIS no mundo</a></li>
-            </ul>
+{%block style%} <link rel="stylesheet" href="{% static 'css/usuarios/home/style.css' %}"> {% endblock %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+    <div class="row">
+        <div class="col-md-6">
+            <h2 class="text">Agendamento online para triagem de detecção da covid-19 e suas variantes</h2>
         </div>
-    </nav>
-           
-    <main class="container flex-grow-1 d-flex flex-column align-items-center justify-content-center">
-        <div class="row">
-            <div class="col-md-6">
-                <h2 class="text">Agendamento online para triagem de detecção da covid-19 e suas variantes</h2>
-            </div>
-            <div class="col-md-6 d-flex flex-column align-items-center">
-                <h2 class="text">Você não está autenticado, o que gostaria de fazer?</h2>
-                <div class="d-flex">
-                    <button class="btn btn-dark rounded-pill px-5 py-3" style="margin-right: 45px;">
-                        <p style="margin: 0; font-size: 1.5rem; text-align: center;">LOGIN</p>
-                    </button>
-                    <button class="btn btn-dark rounded-pill px-5 py-3" style="margin-left: 45px;">
-                        <p style="margin: 0; font-size: 1.5rem; text-align: center;">CADASTRAR</p>
-                    </button>
-                </div>
+
+        <div class="col-md-6 d-flex flex-column align-items-center">
+            <h2 class="text">Você não está autenticado, o que gostaria de fazer?</h2>
+            <div class="d-flex">
+                <button class="btn btn-dark rounded-pill" style="margin-right: 40px;">
+                    <a class="btn-link" href="/login">
+                        <p class="btn-link-text">LOGIN</p>
+                    </a>
+                </button>
+                <button class="btn btn-dark rounded-pill" style="margin-left: 40px;">
+                    <a class="btn-link" href="/cadastrar">
+                        <p class="btn-link-text">CADASTRAR</p>
+                    </a>
+                </button>
             </div>
         </div>
-    </main>
-    
-    <footer class="bg-dark text-white py-4 mt-3">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <p>&copy; 2024 LAIS. Todos os direitos reservados.</p>
-                </div>
-                <div class="col-md-6 text-md-end">
-                    <a href="#">Política de Privacidade</a> | <a href="#">Termos de Serviço</a>
-                </div>
-            </div>
-        </div>
-    </footer>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
-</html>
+    </div>
+{% endblock %}
