--- a/agendamento_covid/templates/usuarios/agendamento.html
+++ b/agendamento_covid/templates/usuarios/agendamento.html
@@ -10,6 +10,7 @@
 
 {% block content %}
   <div class="container">
+    <button class="btn-sair">Sair</button>
     <h1>Realize seu agendamento</h1>
     <div class="col-md-6">
       <label for="estabelecimento" class="form-label text-white">ESTABELECIMENTO DE SAÚDE</label>
