fix: corrigindo alguns problemas ao se cadastrar, atualizado função de login

--- a/agendamento_covid/templates/usuarios/base.html
+++ b/agendamento_covid/templates/usuarios/base.html
@@ -1,10 +1,11 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="{% static 'img/usuarios/favicon.ico' %}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-0Cp0D5A0iD5LPeaFv/ei7stH5Hq18qMA6nsa6sPsAmA+9aGv8Jn3M9l++fwK7KV5ZIWoJfR7kR0H5DwIKBKpvo1AA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="{% static 'css/usuarios/base/style.css' %}">
