fix: corrigido sistema de login

--- a/agendamento_covid/templates/usuarios/cadastrar.html
+++ b/agendamento_covid/templates/usuarios/cadastrar.html
@@ -34,8 +34,8 @@
           <label for="covid_30_dias" class="form-label text-white">POSITIVO PARA COVID RECENTE</label>
           <select class="form-select rounded-pill py-3" id="covid_30_dias" name="covid_30_dias">
             <option value="">Selecione uma opção</option>
-            <option value="true">Tive COVID nos últimos 30 dias</option>
-            <option value="false">Não tive COVID nos últimos 30 dias</option>
+            <option value="True">Tive COVID nos últimos 30 dias</option>
+            <option value="False">Não tive COVID nos últimos 30 dias</option>
           </select>
 
           <label for="senha" class="form-label text-white">SENHA</label>
