--- a/agendamento_covid/templates/usuarios/agendamento.html
+++ b/agendamento_covid/templates/usuarios/agendamento.html
@@ -10,7 +10,10 @@
 
 {% block content %}
   <div class="container">
-    <button class="btn-sair">Sair</button>
+    <form action="{% url 'logout' %}" method="POST">
+      {% csrf_token %}
+      <button class="btn-sair">Sair</button>
+    </form>
     <h1>Realize seu agendamento</h1>
     <div class="col-md-6">
       <label for="estabelecimento" class="form-label text-white">ESTABELECIMENTO DE SAÚDE</label>
