fix: corrigido problemas de agendamento

--- a/agendamento_covid/templates/usuarios/agendamento.html
+++ b/agendamento_covid/templates/usuarios/agendamento.html
@@ -14,19 +14,24 @@
       {% csrf_token %}
       <button class="btn-sair">Sair</button>
     </form>
-    <h1>Realize seu agendamento</h1>
-    <div class="col-md-6">
-      <label for="estabelecimento" class="form-label text-white">ESTABELECIMENTO DE SAÚDE</label>
-      <select class="form-select rounded-pill py-3" id="estabelecimento" name="estabelecimento">
-        <option value="">Selecione o estabelecimento</option>
-        
-      </select>
+    <form action="{% url 'agendamento' %}" method="POST">
+      {% csrf_token %}
+      <h1>Realize seu agendamento</h1>
+      <div class="col-md-6">
+        <label for="estabelecimento" class="form-label text-white">ESTABELECIMENTO DE SAÚDE</label>
+        <select class="form-select rounded-pill py-3" id="estabelecimento" name="estabelecimento">
+          <option value="">Selecione o estabelecimento</option>
+          {% for estabelecimento in estabelecimentos %}
+            <option value="{{ estabelecimento.co_unidade }}">{{ estabelecimento.no_fantasia }}, CNES: {{ estabelecimento.co_cnes }}</option>
+          {% endfor %}
+        </select>
 
-      <label for="data_e_hora" class="form-label text-white">DATA E HORA</label>
-      <input type="datetime-local" class="form-control rounded-pill py-3" id="data_e_hora" name="data_e_hora">
-      <button class="btn btn-dark rounded-pill">
-        <p class="btn-text">AGENDAR</p>
-      </button>
+        <label for="data" class="form-label text-white">DATA</label>
+        <input type="date" class="form-control rounded-pill py-3" id="data" name="data">
+        <button type="submit" class="btn btn-dark rounded-pill">
+          <p class="btn-text">VER HORÁRIOS</p>
+        </button>
+      </form>
     </div>
   </div>
 {% endblock %}
