--- a/agendamento_covid/templates/usuarios/login.html
+++ b/agendamento_covid/templates/usuarios/login.html
@@ -26,7 +26,7 @@
                         <h2 class="text-white">LOGIN</h2>
                         <div class="mb-3">
                             <label for="cpf" class="form-label text-white">CPF</label>
-                            <input type="text" class="form-control rounded-pill py-3" id="cpf" name="cpf" placeholder="000.000.000-00">
+                            <input type="text" class="form-control rounded-pill py-3" id="cpf" name="cpf" placeholder="00000000000">
                         </div>
                         <div class="mb-3">
                             <label for="senha" class="form-label text-white">SENHA</label>
