--- a/agendamento_covid/templates/usuarios/selecionar_horario.html
+++ b/agendamento_covid/templates/usuarios/selecionar_horario.html
@@ -14,6 +14,15 @@
       {% csrf_token %}
       <button class="btn-sair">Sair</button>
     </form>
+    {% if error_message %}
+        <div class="alert alert-danger">
+            {{ error_message }}
+        </div>
+    {% endif %}
+    <form action="{% url 'logout' %}" method="POST">
+      {% csrf_token %}
+      <button class="btn-sair">Sair</button>
+    </form>
     <h1>Realize seu agendamento</h1>
     <div class="row">
       <div class="col-md-6">
