fix: criada pagina para listar agendamentos e finalizações do projeto

--- a/agendamento_covid/templates/usuarios/login.html
+++ b/agendamento_covid/templates/usuarios/login.html
@@ -16,6 +16,11 @@
                     {{ error_message }}
                 </div>
             {% endif %}
+            {% if success_message %}
+                <div class="alert alert-info">
+                    {{ success_message }}
+                </div>
+            {% endif %}
             
             <div class="row">
                 <div class="col-md-6">
