fix: pequenas correções

--- a/agendamento_covid/templates/usuarios/cadastrar.html
+++ b/agendamento_covid/templates/usuarios/cadastrar.html
@@ -25,7 +25,7 @@
           <input type="text" class="form-control rounded-pill py-3" id="nome" name="nome" placeholder="Seu nome">
 
           <label for="cpf" class="form-label text-white">CPF</label>
-          <input type="text" class="form-control rounded-pill py-3" id="cpf" name="cpf" placeholder="000.000.000-00">
+          <input type="text" class="form-control rounded-pill py-3" id="cpf" name="cpf" placeholder="00000000000">
 
           <label for="date_nascimento" class="form-label text-white">DATA DE NASCIMENTO</label>
           <input type="date" class="form-control rounded-pill py-3" id="date_nascimento" name="date_nascimento">
